Reanabling build